fix margin issue on some text on small displays

--- a/main.css
+++ b/main.css
@@ -52,8 +52,8 @@ h1 small {
 }
 
 .text-container {
-    width: 100%;
     max-width: 1024px;
+    margin: 0 24px;
 }
 
 .vr {
